Change-Id: Ie199188f6926c049425cc4f23808f5a4dc2b3950 Signed-off-by: dvukeli1 <mitja.vukelic@gmail.com>

--- a/Minimum_String_Moves/build.gradle
+++ b/Minimum_String_Moves/build.gradle
@@ -37,7 +37,7 @@ jar {
 	baseName = 'Minimum_string_moves'
     version =  '1.0.1'
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
+         attributes 'Main-Class': 'views.Main','Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
     }
 }
 
