Change-Id: I6be23387c6819cc218a469252bf625c9426cb088 Signed-off-by: dvukeli1 <mitja.vukelic@gmail.com>

--- a/Minimum_String_Moves/build.gradle
+++ b/Minimum_String_Moves/build.gradle
@@ -35,9 +35,8 @@ run{
 
 jar {
 	baseName = 'Minimum_string_moves'
-    version =  '1.0.1'
     manifest {
-         attributes 'Main-Class': 'views.Main','Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
+         attributes 'Main-Class': 'view.Main','Implementation-Version': version
     }
 }
 
